# ruffle

./: Cargo.toml
.github/: dependabot.yml
core/: Cargo.toml
core/macros/: Cargo.toml
core/src/: avm1.rs  character.rs  context.rs  display_object.rs  library.rs  shape_utils.rs  tag_utils.rs
core/src/avm1/: activation.rs  globals.rs  return_value.rs  scope.rs
core/src/backend/audio/: decoders.rs
core/src/backend/audio/decoders/: adpcm.rs  mp3.rs  pcm.rs
core/src/display_object/: bitmap.rs  button.rs  edit_text.rs  graphic.rs  morph_shape.rs  movie_clip.rs  text.rs
desktop/: Cargo.toml
desktop/src/: audio.rs  render.rs
exporter/: Cargo.toml
render/canvas/: Cargo.toml
render/webgl/: Cargo.toml
render/wgpu/: Cargo.toml
scanner/: Cargo.toml
swf/: Cargo.toml
swf/src/: error.rs  read.rs  test_data.rs  types.rs  write.rs
swf/src/avm1/: read.rs
web/: Cargo.toml  package-lock.json  package.json
web/selfhosted/: package-lock.json  package.json
web/src/: render.rs  utils.rs
