[package]
name = "ruffle_desktop"
version = "0.1.0"
authors = ["Mike Welsh <mwelsh@gmail.com>"]
edition = "2018"
default-run = "ruffle_desktop"

[dependencies]
cpal = "0.11.0"
env_logger = "0.7.1"
generational-arena = "0.2.7"
glium = "0.26.0"
glutin = "0.23"
image = "0.23.0"
jpeg-decoder = "0.1.18"
log = "0.4"
lyon = "0.15.5"
ruffle_core = { path = "../core" }
sample = "0.10.0"
structopt = "0.3.9"
url = "2.1.1"
webbrowser = "0.5.2"
winit = "0.21"

[features]
avm_debug = ["ruffle_core/avm_debug"]
