[package]
name = "ruffle_scanner"
version = "0.1.0"
authors = ["Nathan Adams <dinnerbone@dinnerbone.com>"]
edition = "2018"

[dependencies]
csv = "1.1"
env_logger = "0.7.1"
indicatif = "0.14"
log = "0.4"
path-slash = "0.1.1"
ruffle_core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3.9"
walkdir = "2.3.1"
